adjust head title, add icon

--- a/dest/index.html
+++ b/dest/index.html
@@ -48,6 +48,11 @@
       font-family: sans-serif;
       font-weight: 100;
     }
+    .titleIcon {
+      width: 50px;
+      margin-right: 25px;
+      margin-left: 25px;
+    }
   </style>
   <script src="index.js"></script>
   <script>
@@ -58,9 +63,13 @@
 </head>
 
 <body>
-
+  <center>
+    <h1>
+      <img src='icon.png' class='titleIcon'/>Fine Tones
+      <img src='icon.png' class='titleIcon'/>
+    </h1>
+  </center>
   <div class="container">
-    <h1>Fine Tones</h1>
     <div class="row" id='tones-container'>
     </div>
   </div>
